--- a/main.html
+++ b/main.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	</head>
-	<body>
-	
-	</body>
+  <head>
+    <title>Signup Bootstrap Modal</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Trigger the modal with a button -->
+    <button
+      type="button"
+      class="btn btn-info btn-lg m-top mx-auto"
+      data-toggle="modal"
+      data-target="#myModal"
+    >
+      Sign Up
+    </button>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+            <h4 class="modal-title">Create Account</h4>
+          </div>
+          <div class="modal-body">
+            <form action="/">
+              <p>
+                <label for="email-add">Email address</label>
+                <br />
+                <input
+                  type="email"
+                  name=""
+                  id="email-add"
+                  required
+                  placeholder="Enter email"
+                /><br />
+                <small>Your information is safe with us.Your information is safe
+                  with us.</small>
+              </p>
+              <p>
+                <label for="password">Password</label>
+                <br />
+                <input
+                  type="password"
+                  name=""
+                  id="password"
+                  required
+                  placeholder="Password"
+                />
+              </p>
+              <p>
+                <label for="conf-password">Confirm Password</label>
+                <br />
+                <input
+                  type="password"
+                  name=""
+                  id="conf-password"
+                  required
+                  placeholder="Confirm Password"
+                />
+              </p>
+              <div class="modal-footer">
+                <input
+                  class="btn btn-primary btn-success"
+                  type="submit"
+                  value="Submit"
+                />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
